--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -5,10 +5,9 @@
 #redis.host=192.168.20.101
 #redis.port=6380
 #redis.pass=foobared
-redis.host=47.96.135.54
+redis.host=localhost
 redis.port=6379
 redis.pass=
-  
 redis.maxIdle=300
 redis.maxActive=600
 redis.maxWait=1000
